--- a/account-dev.properties
+++ b/account-dev.properties
@@ -1,4 +1,4 @@
-account.msg=Welcome to the Bank account Dev application
+account.msg=Welcome to the Bank account Dev application Git
 account.build-version=2
 
 account.mailDetails.hostName=default-account@serey.com
