--- a/account-prod.properties
+++ b/account-prod.properties
@@ -1,4 +1,4 @@
-account.msg=Welcome to the Bank account prod application
+account.msg=Welcome to the Bank account prod application 2025
 account.build-version=1
 
 account.mailDetails.hostName=default-account@serey.com
