--- a/account-prod.properties
+++ b/account-prod.properties
@@ -9,3 +9,7 @@ account.mailDetails.subject=Your account detail from serey bank prod environment
 account.activeBranches[0]=Phnom Penh
 account.activeBranches[1]=Takeo
 account.activeBranches[2]=KPC
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/bank_account
+spring.datasource.username=postgres
+spring.datasource.password=Admin
